--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
 	<meta name="msapplication-TileImage" content="resources/favicons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<!-- <link rel="stylesheet" href="resources/libs/swiper-bundle.min.css" /> -->
+	<link rel="stylesheet" href="resources/libs/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/main.min.css" />
 	<title>Zooov</title>
 </head>
@@ -102,12 +102,14 @@
 	@include('partials/_header.html')
 	<main class="main-content">
 		@include('partials/_hero-section.html')
+		@include('partials/_about.html')
+		@include('partials/_diet.html')
 
 	</main>
 	@include('partials/_footer.html')
 	<!-- @include('partials/_modals.html') -->
 
-	<!-- <script src="resources/libs/swiper-bundle.min.js"></script> -->
+	<script src="resources/libs/swiper-bundle.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 
