--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
 	<meta name="msapplication-TileImage" content="resources/favicons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<!-- <link rel="stylesheet" href="resources/libs/swiper-bundle.min.css" /> -->
+	<link rel="stylesheet" href="resources/libs/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/main.min.css" />
 	<title>Zooov</title>
 </head>
@@ -111,25 +111,25 @@
 			<div class="header__nav-body">
 				<ul class="header__list list-reset">
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">BARF</a>
+						<a href="#about" class="header__link link-reset">BARF</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">Рационы</a>
+						<a href="#diet" class="header__link link-reset">Рационы</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">ZOOOV</a>
+						<a href="#pluses" class="header__link link-reset">ZOOOV</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">О нас</a>
+						<a href="#zooov" class="header__link link-reset">О нас</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">Доставка</a>
+						<a href="#delivery" class="header__link link-reset">Доставка</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">FAQ</a>
+						<a href="#faq" class="header__link link-reset">FAQ</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">Контакты</a>
+						<a href="#contact" class="header__link link-reset">Контакты</a>
 					</li>
 				</ul>
 				<a href="#" class="header__link-diet header__link-diet--hidden main-btn-link main-btn-link--red link-reset">Выбрать рацион</a>
@@ -160,6 +160,103 @@
 		<a href="#" class="hero__link main-btn-link main-btn-link--red link-reset">Выбрать рацион</a>
 	</div>
 </section>
+		<section class="about section" id="about">
+	<div class="about__container container">
+		<div class="about__info">
+			<h2 class="about__heading main-heading text-reset">
+				Что такое BARF
+			</h2>
+			<p class="about__text main-text text-reset">
+				BARF (Biologically Appropriate Raw Food) — система питания собак, основанная на сырых натуральных продуктах. Такой рацион максимально приближен к естественному пищевому поведению хищников, а значит биологически правилен.
+			</p>
+			<p class="about__text about__text--lg text-reset">
+				После перехода на питание по системе BARF у собак:
+			</p>
+			<ul class="about__list list-reset">
+				<li class="about__item main-text">Нормализуется пищеварение </li>
+				<li class="about__item main-text">Проходят аллергические реакции</li>
+				<li class="about__item main-text">Прекращается образование зубного камня</li>
+				<li class="about__item main-text">Появляется больше энергии</li>
+				<li class="about__item main-text">Увеличивается продолжительность жизни</li>
+			</ul>
+		</div>
+		<div class="about__image">
+			<img src="img/about-img.jpg" alt="Песик кушает мясо" class="about__img">
+		</div>
+		<div class="about__classification classification">
+			<div class="classification-swiper " data-mobile="false">
+				<div class="classification-swiper__pagination"></div>
+				<div class="classification-swiper__wrapper">
+					<div class="classification-swiper__slide classification-slide">
+						<div class="classification-slide__wrapper">
+							<h3 class="classification-slide__heading text-reset">
+								Для взрослых
+							</h3>
+							<ul class="classification-slide__list list-reset">
+								<li class="classification-slide__item classification-slide__item--steak">
+									Мясо – 70%
+								</li>
+								<li class="classification-slide__item classification-slide__item--bone">
+									Кости – 10%
+								</li>
+								<li class="classification-slide__item classification-slide__item--vegetables">
+									Овощи – 7%
+								</li>
+								<li class="classification-slide__item classification-slide__item--liver">
+									Печень – 5%
+								</li>
+								<li class="classification-slide__item classification-slide__item--intestines">
+									Субпродукты – 5%
+								</li>
+								<li class="classification-slide__item classification-slide__item--bones">
+									Семена/Орехи – 2%
+								</li>
+								<li class="classification-slide__item classification-slide__item--fruits">
+									Фрукты – 1%
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="classification-swiper__slide classification-slide">
+						<div class="classification-slide__wrapper">
+							<h3 class="classification-slide__heading text-reset">
+								Для щенков
+							</h3>
+							<ul class="classification-slide__list list-reset">
+								<li class="classification-slide__item classification-slide__item--steak">
+									Мясо – 58%
+								</li>
+								<li class="classification-slide__item classification-slide__item--bone">
+									Кости – 17%
+								</li>
+								<li class="classification-slide__item classification-slide__item--vegetables">
+									Овощи – 7%
+								</li>
+								<li class="classification-slide__item classification-slide__item--liver">
+									Печень – 7%
+								</li>
+								<li class="classification-slide__item classification-slide__item--intestines">
+									Субпродукты – 7%
+								</li>
+								<li class="classification-slide__item classification-slide__item--bones">
+									Семена/Орехи – 3%
+								</li>
+								<li class="classification-slide__item classification-slide__item--fruits">
+									Фрукты – 1%
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+		<section class="diet section" id="diet">
+	<div class="diet__container container">
+		p
+	</div>
+</section>
 
 	</main>
 	<footer class="footer">
@@ -169,7 +266,7 @@
 </footer>
 	
 
-	<!-- <script src="resources/libs/swiper-bundle.min.js"></script> -->
+	<script src="resources/libs/swiper-bundle.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 
