--- a/app/index.html
+++ b/app/index.html
@@ -157,7 +157,7 @@
 				<strong class="hero__strong">BARF</strong>
 			</p>
 		</h1>
-		<a href="#" class="hero__link main-btn-link main-btn-link--red link-reset">Выбрать рацион</a>
+		<a href="#diet" class="hero__link main-btn-link main-btn-link--red link-reset">Выбрать рацион</a>
 	</div>
 </section>
 		<section class="about section" id="about">
