Добавлена новая секция

--- a/app/index.html
+++ b/app/index.html
@@ -363,6 +363,78 @@
 		</div>
 	</div>
 </section>
+		<section class="pluses section">
+	<div class="pluses__container container">
+		<h2 class="pluses__heading main-heading text-reset">
+			Почему ZOOOV
+		</h2>
+		<ul class="pluses__list list-reset">
+			<li class="pluses__item  plus plus--paper">
+				<h3 class="plus__heading text-reset">
+					Натурально
+				</h3>
+				<p class="plus__text main-text text-reset">
+					Все продукты тщательно отбираем у проверенных поставщиков.
+				</p>
+			</li>
+			<li class="pluses__item  plus plus--heart">
+				<h3 class="plus__heading text-reset">
+					Здорово
+				</h3>
+				<p class="plus__text main-text text-reset">
+					Система питания, которая продлевает жизнь
+					вашего хвостика.
+				</p>
+			</li>
+			<li class="pluses__item  plus plus--rocket">
+				<h3 class="plus__heading text-reset">
+					Быстро
+				</h3>
+				<p class="plus__text main-text text-reset">
+					Сделайте заказ на сайте
+					и с вами свяжется наш менеджер для уточнения деталей.</p>
+			</li>
+			<li class="pluses__item  plus plus--smile">
+				<h3 class="plus__heading text-reset">
+					Удобно
+				</h3>
+				<p class="plus__text main-text text-reset">
+					Достаточно разморозить порцию ZOOOV, удалить отрывную крышку с лотка и обед для вашего питомца готов.</p>
+			</li>
+		</ul>
+	</div>
+</section>
+		<section class="zooov">
+	<div class="zooov__container container">
+		<div class="zooov__images">
+			<img src="img/zooov.png" alt="Собачки" class="zooov__image zooov__image--desk">
+			<img src="img/zooov-mobile.png" alt="Собачки" class="zooov__image  zooov__image--mobile">
+			<img src="img/zooov-3.png" alt="Питбуль" class="zooov__image zooov__image--dog">
+			<img src="img/zooov-4.png" alt="Сердечко" class="zooov__image  zooov__image--heart">
+		</div>
+
+		<div class="zooov__info">
+			<h2 class="zooov__heading main-heading text-reset">
+				С заботой и <span class="zooov__dashes">любовь</span> от <span class="zooov__dashes zooov__dashes--mobile">Zooov</span>
+			</h2>
+			<p class="zooov__text text-reset main-text">
+				Мы сами владельцы собак и знаем, как важно правильное и качественное питание для долгой и счастливой жизни вашего питомца. Для нас ZOOOV это не просто бизнес, это наш вклад в повышение качества жизни всех собак.
+			</p>
+			<p class="zooov__text text-reset main-text">
+				Мы знаем, как правильно подобрать и переработать мясо, субпродукты, овощи и фрукты, чтобы питание вашего питомца было максимально сбалансированным и полезным.
+			</p>
+			<p class="zooov__text text-reset main-text">
+				Обычного сырого мяса из магазина будет недостаточно для полноценного питания собаки. ZOOOV — экономия времени, вам не придется искать необходимые составляющие для рациона.
+			</p>
+			<p class="zooov__text text-reset main-text">
+				Мы сами отбираем мясо, кости, легкие, печень и другие говяжьи, кроличьи и птичьи субпродукты у проверенных поставщиков. Закупаем органические овощи и используем разнообразные масла, такие как конопляное и льняное.
+			</p>
+			<p class="zooov__text text-reset main-text">
+				ZOOOV — это удобно, мы доставляем готовый рацион на две недели уже смешанным, расфасованным и упакованным в порционные лотки,готовыми к заморозке. За два часа до кормления достаточно переместить контейнер из морозилки в холодильник для ПРАВИЛЬНОЙ разморозки.
+			</p>
+		</div>
+	</div>
+</section>
 
 	</main>
 	<footer class="footer">
