--- a/src/index.html
+++ b/src/index.html
@@ -104,6 +104,8 @@
 		@include('partials/_hero-section.html')
 		@include('partials/_about.html')
 		@include('partials/_diet.html')
+		@include('partials/_pluses.html')
+		@include('partials/_zooov.html')
 
 	</main>
 	@include('partials/_footer.html')
