Создана секция FAQ

--- a/app/index.html
+++ b/app/index.html
@@ -363,7 +363,7 @@
 		</div>
 	</div>
 </section>
-		<section class="pluses section">
+		<section class="pluses section" id="pluses">
 	<div class="pluses__container container">
 		<h2 class="pluses__heading main-heading text-reset">
 			Почему ZOOOV
@@ -404,7 +404,7 @@
 		</ul>
 	</div>
 </section>
-		<section class="zooov">
+		<section class="zooov" id="zooov">
 	<div class="zooov__container container">
 		<div class="zooov__images">
 			<img src="img/zooov.png" alt="Собачки" class="zooov__image zooov__image--desk">
@@ -435,7 +435,156 @@
 		</div>
 	</div>
 </section>
-
+		<section class="delivery section" id="delivery">
+	<div class="delivery__container container">
+		<h2 class="delivery__heading main-heading text-reset">Как получить ZOOOV?</h2>
+		<ul class="delivery__list list-reset">
+			<li class="delivery__item delivery-item delivery-item--package">
+				<h3 class="delivery-item__heading text-reset">Закажите рацион</h3>
+				<p class="delivery-item__text main-text text-reset">
+					Выберите рацион для своей собаки. Если не знаете сколько
+					и какой – <button class="delivery-item__btn modal-btn btn-reset" data-path="calculate">мы подскажем</button>.
+				</p>
+			</li>
+			<li class="delivery__item delivery-item delivery-item--phone">
+				<h3 class="delivery-item__heading text-reset">Подтвердите заказ</h3>
+				<p class="delivery-item__text main-text text-reset">
+					Мы свяжемся с вами для подтверждения заказа
+					и уточнения деталей.
+				</p>
+			</li>
+			<li class="delivery__item delivery-item delivery-item--clock">
+				<h3 class="delivery-item__heading text-reset">Ожидайте доставки</h3>
+				<p class="delivery-item__text main-text text-reset">
+					Привозим заказ на следующий день. По СПб – 350₽, при заказе от 3 500₽ – бесплатно. Лен. область – по договоренности.
+				</p>
+			</li>
+			<li class="delivery__item delivery-item delivery-item--heart">
+				<h3 class="delivery-item__heading text-reset">Радуйте своего питомца</h3>
+				<p class="delivery-item__text main-text text-reset">
+					Просто разморозьте рацион: при комнатной температуре – 3 часа, в холодильнике – 12-15 часов.
+				</p>
+			</li>
+		</ul>
+	</div>
+</section>
+		<section class="faq section" id="faq">
+	<div class="faq__container container">
+		<h2 class="faq__heading main-heading text-reset">Частые вопросы</h2>
+		<ul class="faq__accordion accordion list-reset">
+			<li class="accordion__item">
+				<h3 class="accordion__heading text-reset">
+					<button class="accordion__trigger main-text btn-reset" aria-expanded="false">
+						Не опасны ли бактерии, которые находятся в сыром мясе?
+					</button>
+				</h3>
+				<div class="accordion__body " aria-hidden="true">
+					<p class="accordion__text main-text text-reset">
+						У здоровых собак отличная иммунная система, готовая ко всем видам бактерий. Рацион BARF как раз укрепит иммунитет вашей собаки и защитит ее от влияния бактерий, которые находятся на улице или даже в вашем доме.
+					</p>
+				</div>
+			</li>
+			<li class="accordion__item">
+				<h3 class="accordion__heading text-reset">
+					<button class="accordion__trigger main-text btn-reset" aria-expanded="false">
+						Надо ли давать дополнительно витамины к рациону BARF?
+					</button>
+				</h3>
+				<div class="accordion__body " aria-hidden="true">
+					<p class="accordion__text main-text text-reset">
+						Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. Курсивных предложения рот текст правилами! Сбить путь от всех бросил дорогу!
+					</p>
+				</div>
+			</li>
+			<li class="accordion__item">
+				<h3 class="accordion__heading text-reset">
+					<button class="accordion__trigger main-text btn-reset" aria-expanded="false">
+						А если моя собака уже давно питается промышленным кормом и у нее нет проблем со здоровьем?
+					</button>
+				</h3>
+				<div class="accordion__body " aria-hidden="true">
+					<p class="accordion__text main-text text-reset">
+						Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. Курсивных предложения рот текст правилами! Сбить путь от всех бросил дорогу!
+					</p>
+				</div>
+			</li>
+			<li class="accordion__item">
+				<h3 class="accordion__heading text-reset">
+					<button class="accordion__trigger main-text btn-reset" aria-expanded="false">
+						Можно ли смешивать натуральный корм и корм промышленного производства?
+					</button>
+				</h3>
+				<div class="accordion__body " aria-hidden="true">
+					<p class="accordion__text main-text text-reset">
+						Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. Курсивных предложения рот текст правилами! Сбить путь от всех бросил дорогу!
+					</p>
+				</div>
+			</li>
+			<li class="accordion__item">
+				<h3 class="accordion__heading text-reset">
+					<button class="accordion__trigger main-text btn-reset" aria-expanded="false">
+						Могу ли я сам составить для своей собаки рацион по системе BARF?
+					</button>
+				</h3>
+				<div class="accordion__body " aria-hidden="true">
+					<p class="accordion__text main-text text-reset">
+						Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. Курсивных предложения рот текст правилами! Сбить путь от всех бросил дорогу!
+					</p>
+				</div>
+			</li>
+			<li class="accordion__item">
+				<h3 class="accordion__heading text-reset">
+					<button class="accordion__trigger main-text btn-reset" aria-expanded="false">
+						Присутствует ли в ZOOOV рационах рыба?
+					</button>
+				</h3>
+				<div class="accordion__body " aria-hidden="true">
+					<p class="accordion__text main-text text-reset">
+						Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. Курсивных предложения рот текст правилами! Сбить путь от всех бросил дорогу!
+					</p>
+				</div>
+			</li>
+			<li class="accordion__item">
+				<h3 class="accordion__heading text-reset">
+					<button class="accordion__trigger main-text btn-reset" aria-expanded="false">
+						Как перевести питомца на натуральное питание?
+					</button>
+				</h3>
+				<div class="accordion__body " aria-hidden="true">
+					<p class="accordion__text main-text text-reset">
+						Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. Курсивных предложения рот текст правилами! Сбить путь от всех бросил дорогу!
+					</p>
+				</div>
+			</li>
+			<li class="accordion__item">
+				<h3 class="accordion__heading text-reset">
+					<button class="accordion__trigger main-text btn-reset" aria-expanded="false">
+						Как готовить рацион ZOOOV?
+					</button>
+				</h3>
+				<div class="accordion__body " aria-hidden="true">
+					<p class="accordion__text main-text text-reset">
+						Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. Курсивных предложения рот текст правилами! Сбить путь от всех бросил дорогу!
+					</p>
+				</div>
+			</li>
+			<li class="accordion__item">
+				<h3 class="accordion__heading text-reset">
+					<button class="accordion__trigger main-text btn-reset" aria-expanded="false">
+						При переходе на рацион ZOOOV у собаки начались проблемы с ЖКТ.
+						Это нормально?
+					</button>
+				</h3>
+				<div class="accordion__body " aria-hidden="true">
+					<p class="accordion__text main-text text-reset">
+						Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. Курсивных предложения рот текст правилами! Сбить путь от всех бросил дорогу!
+					</p>
+				</div>
+			</li>
+		</ul>
+	</div>
+</section>
+		
 	</main>
 	<footer class="footer">
 	<div class="footer__container container">
