--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,9 @@
 		@include('partials/_diet.html')
 		@include('partials/_pluses.html')
 		@include('partials/_zooov.html')
-
+		@include('partials/_delivery.html')
+		@include('partials/_faq.html')
+		@include('partials/_contact.html')
 	</main>
 	@include('partials/_footer.html')
 	<!-- @include('partials/_modals.html') -->
